RESOLVED FIXED156326
REGRESSION (197987): Ingredient lists on smittenkitchen.com are full justified instead of left justified.
https://bugs.webkit.org/show_bug.cgi?id=156326
Summary REGRESSION (197987): Ingredient lists on smittenkitchen.com are full justifie...
alan
Reported 2016-04-06 18:48:48 PDT
Steps to Reproduce: 1. Go to http://smittenkitchen.com/blog/2011/02/blood-orange-olive-oil-cake/ 2. Scroll down to the end of the article where the recipe is
Attachments
Patch (9.91 KB, patch)
2016-04-06 18:58 PDT, alan
no flags
Patch (9.87 KB, patch)
2016-04-06 19:35 PDT, alan
no flags
alan
Comment 1 2016-04-06 18:49:02 PDT
alan
Comment 2 2016-04-06 18:58:07 PDT
Simon Fraser (smfr)
Comment 3 2016-04-06 19:21:21 PDT
Comment on attachment 275845 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=275845&action=review > Source/WebCore/rendering/SimpleLineLayout.cpp:409 > + return Optional<TextFragmentIterator::TextFragment>(); return Nullopt.
alan
Comment 4 2016-04-06 19:35:29 PDT
WebKit Commit Bot
Comment 5 2016-04-07 07:55:55 PDT
Comment on attachment 275850 [details] Patch Clearing flags on attachment: 275850 Committed r199156: <http://trac.webkit.org/changeset/199156>
WebKit Commit Bot
Comment 6 2016-04-07 07:55:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.