REGRESSION (197987): Ingredient lists on smittenkitchen.com are full justified instead of left justified. https://bugs.webkit.org/show_bug.cgi?id=156326 <rdar://problem/25519393>

Reviewed by Antti Koivisto.

According to the spec (https://drafts.csswg.org/css-text-3/#text-align-property)
unless otherwise specified by text-align-last, the last line before
a forced break or the end of the block is start-aligned.

In this patch we check if a forced break is present and we apply text alignment accordingly.

Test: fast/css3-text/css3-text-justify/text-justify-last-line-simple-line-layout.html

Source/WebCore:

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::LineState::lastFragment): Make it optional so that we don't just check against a default fragment.
(WebCore::SimpleLineLayout::createLineRuns):
(WebCore::SimpleLineLayout::justifyRuns): Do not compute first run index on the current line twice.
(WebCore::SimpleLineLayout::textAlignForLine):
(WebCore::SimpleLineLayout::closeLineEndingAndAdjustRuns):

LayoutTests:

* fast/css3-text/css3-text-justify/text-justify-last-line-simple-line-layout-expected.html: Added.
* fast/css3-text/css3-text-justify/text-justify-last-line-simple-line-layout.html: Added.


Canonical link: https://commits.webkit.org/174425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199156 268f45cc-cd09-0410-ab3c-d52691b4dbfc